# anti-debug

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  test.yml
ci/: .gitignore  Cargo.toml
ci/src/: main.rs
examples/: ci_anti_debug.rs  ci_deny_attach.rs
src/: lib.rs
