[package]
name = "anti-debug"
version = "0.1.1"
authors = ["xuxiaocheng <2762267080@qq.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "An `is_debugger_present` detector for all platforms."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xuxiaocheng0201/anti-debug/"
documentation = "https://docs.rs/anti-debug/"
keywords = ["anti-debugging"]

[target.'cfg(target_os = "windows")'.dependencies]
errno = "~0.3"
windows-sys = { version = "~0.61", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Wdk_System_Threading", "Win32_System_Kernel"] }

[target.'cfg(target_os = "linux")'.dependencies]
[target.'cfg(target_os = "android")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
errno = "~0.3"
libproc = "~0.14"

[features]
deep-detect = []
